# runmc-cli

./: Cargo.toml
src/: cli.yaml  main.rs
