[package]
name = "runmc-cli"
version = "0.1.0"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]
edition = "2021"
repository = "https://github.com/mq1/runmc-cli"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1"

[dependencies.minecraft-launcher-lib]
git = "https://github.com/mq1/minecraft-launcher-lib-rs.git"
rev = "1f971b689c9706f46f1536378207ff245b0dffd7"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
